--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>CADASTRO DE JOGOS</h1>
+    <h2>CADASTRO DE JOGOS</h2>
+    <h3>CADASTRO DE JOGOS</h3>
     <script src="app.js"></script>
 </body>
 </html>
