Apagar essa alteração

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
     <h1>CADASTRO DE JOGOS</h1>
     <h2>CADASTRO DE JOGOS</h2>
+     <h1>CADASTRO DE JOGOS</h1>
     <h3>CADASTRO DE JOGOS</h3>
+
+
     <script src="app.js"></script>
 </body>
 </html>
